# rest_articles_axum

./: .gitignore  Cargo.toml  README.md  build.rs
client-kmp/androidApp/: module.yaml
client-kmp/androidApp/res/values/: strings.xml
client-kmp/androidApp/src/: AndroidManifest.xml  ArticleApp.kt  MainActivity.kt
client-kmp/androidApp/src/screens/: DetailScreen.kt  ListScreen.kt
client-kmp/gradle/: libs.versions.toml
client-kmp/iosApp/iosApp/: DetailView.swift  ListView.swift
client-kmp/shared/: module.yaml
client-kmp/shared/src/data/: ArticleApi.kt  ArticleObject.kt  ArticleRepository.kt  ArticleStorage.kt
client-kmp/shared/src/di/: Koin.kt
client-kmp/shared/src/screens/: DetailViewModel.kt  ListViewModel.kt
client-kmp/shared/src@ios/: KoinDependencies.kt
docs/db/: mongo_hackolade.hck.json  postgres_api_pgmodler.dbm  postgres_identity_pgmodler.dbm  postgres_pgmodler.dbm
e2e-playwright/: package-lock.json  package.json
proto/api/articles/article/: create_update_articles_v1.proto  delete_articles_v1.proto  get_article_list_v1.proto  get_article_v1.proto
proto/core/: create_update_entities_response.proto
proto/framework/core/: create_update_entities_response.proto
src/: errors.rs  lib.rs  main.rs
src/controllers/: article_controller.rs  mod.rs
src/data/: mod.rs
src/data/repositories/: article_repository.rs  mod.rs  repository_base.rs
src/data/repositories/fake/: fake_article_repository.rs  fake_repository_base.rs  mod.rs
src/domain/articles/: article.rs
src/dtos/: article_dto.rs  mod.rs
src/entities/: article.rs  article_entity.rs  mod.rs
src/framework/core/: mod.rs
src/framework/core/domain/: mod.rs
src/framework/core/errors/: mod.rs
src/framework/core/paging/: mod.rs
src/framework/infrastructure/: mod.rs  multiplex_service.rs  open_api.rs  reverse_proxy.rs
src/framework/infrastructure/persistence/: fake_mongo_repository.rs  mod.rs  mongo_repository.rs
src/modules/api/: mod.rs  persistence.rs
src/modules/api/features/articles/article/: create_update_articles_v1.rs  delete_articles_v1.rs  (+3 more)
src/modules/api/persistence/: mod.rs
src/modules/web/: mod.rs  templates.rs
src/modules/web/features/index/: index_page.rs  mod.rs
src/repositories/: article_repository.rs  mod.rs
src/services/: article_service.rs
templates/web/: index.html
templates/web/components/articles/: article-list.html  article.html
tests/: article_service_tests.rs  article_tests.rs
tests/api/: mod.rs
tests/api/domain/articles/: article.rs
tests/api/features/articles/article/: create_update_articles_v1.rs  mod.rs
web-nextjs-1/: next.config.mjs  package-lock.json  package.json
web-nextjs-1/src/app/comments/: page.tsx  styles.css
web-nextjs-1/src/app/editor/: page.tsx
(+2 files in other folders)
